xterm (327-2) UNRELEASED; urgency=medium

  * Bump debhelper compatibility level to 10.
    - Add autoconf-dickey to Build-Depends and an override for
      dh_autoreconf to debian/rules.
  * Switch to format 3.0 (quilt).
    - Drop quilt from Build-Depends and delete debian/README.source.

 -- Sven Joachim <svenjoac@gmx.de>  Sat, 12 Nov 2016 19:19:33 +0100

xterm (327-1) unstable; urgency=medium

  * New upstream release.
    - Add a check in the function which handles end-of-line wrapping
      to ensure that C1 controls are allocated one column when
      allowC1Printable is set (Closes: #738794).
    - Modify allowC1Printable to disallow codes 160-254 as being equivalent
      to codes 32-126 when parsing escape sequences (Closes: #839220).

 -- Sven Joachim <svenjoac@gmx.de>  Sun, 09 Oct 2016 11:25:56 +0200

xterm (326-1) unstable; urgency=medium

  * New upstream release.
    - Add examples of setting the icon title with/without the window
      title in the manual (Closes: #833984).
    - Amend fix for #738794 to restore a check for missing characters
      which are not combining characters.  Also fill in a corresponding
      special case for TrueType fonts (Closes: #827905, #738794).
  * Refresh Debian patches.
  * Update copy of XTerm FAQ to revision 1.329 (dated 2016/09/16).

 -- Sven Joachim <svenjoac@gmx.de>  Tue, 27 Sep 2016 20:46:07 +0200

xterm (325-1) unstable; urgency=medium

  * New upstream release.
    - Further improve fix for #545220 in xterm 248, to avoid conflict
      with combining characters (Closes: #738794).
  * Refresh Debian patches.

 -- Sven Joachim <svenjoac@gmx.de>  Wed, 08 Jun 2016 17:39:36 +0200

xterm (324-2) unstable; urgency=medium

  * Enable all hardening options.
  * Remove the menu file (see #741573).
  * Add libxinerama-dev to Build-Depends.
  * Update copy of XTerm FAQ to revision 1.317 (dated 2016/03/21).
  * Bump Standards-Version to 3.9.8.

 -- Sven Joachim <svenjoac@gmx.de>  Sun, 08 May 2016 08:32:18 +0200
