@@ -5,6 +5,7 @@ xterm (327-2) UNRELEASED; urgency=medium
       dh_autoreconf to debian/rules.
   * Switch to format 3.0 (quilt).
     - Drop quilt from Build-Depends and delete debian/README.source.
+  * Update copy of XTerm FAQ to revision 1.332 (dated 2016/10/23).
 
  -- Sven Joachim <svenjoac@gmx.de>  Sat, 12 Nov 2016 19:19:33 +0100
 
